src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/MissingResourceKey/InvalidMissingResourceKey.php
<?php

namespace Invalid\MissingResourceKey;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

/**
 * Invalid because there're missing keys in its resource definition
 */
class InvalidMissingResourceKey extends ClarolineExtension
{
}